--- a/home.html
+++ b/home.html
@@ -6,7 +6,7 @@
   <title>Document</title>
 </head>
 <body>
-  <h1>Bienvenue sur ma page homme</h1>
+  <h1>Bienvenue sur ma page home</h1>
   <p>Cette page est un exemple de structure HTML de base.</p>
   <p>Vous pouvez naviguer vers d'autres pages en utilisant les liens ci-dessous :</p>
 </body>
