--- a/presentation.html
+++ b/presentation.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Présentation</title>
 </head>
 <body>
   <p>Ceci est une page de présentation</p>
