--- a/mapage.html
+++ b/mapage.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="'Descrition de la page">
+    <meta name="keywords" content="mot-clé1, mot-clé2">
+    <meta name="author" content="Auteur">
+    <meta name="robots" content="index, follow">
     <link rel="stylesheet" href="mapage.css" />
     <title>Ma première page HTML</title>
   </head>
   <body>
-    <header>
+    <header> <!-- entête de page-->
       <nav> <!-- barre de navigation-->
         <ul>
           <!--liste non ordonnée-->
@@ -18,7 +22,14 @@
         </ul>
       </nav>
     </header>
-    <main>
+    <main> <!-- contenu principale-->
+
+
+      <section id="presentation"></section>  <!-- section de présentation-->
+      <section id="cv"></section>            <!-- section de CV-->
+      <section id="skills"></section>        <!-- section de compétences-->
+
+
       <!--Les Titres-->
       <h1>Mon titre</h1>
       <h2>Mon titre</h2>
@@ -28,8 +39,8 @@
       <h6>Mon titre</h6>
 
       <!--Les Textes-->
-      <p>Mon premier paragraphe</p>
-      <strong>Mon texte en gras</strong>
+      <p class="mon_texte">Mon premier paragraphe</p>
+      <strong class="mon_texte">Mon texte en gras</strong>
       <em>Texte emphatique</em>
       <mark>Texte surligné</mark>
       <blockquote>Citation</blockquote>
@@ -42,11 +53,85 @@
 
       <!--Les Médias et les liens-->
       <a href="url"></a>                                       <!--lien hypertexte-->
-      <img src="image.jpg" alt="descritpion de l'image" />     <!--image avec description-->
-      <video src="video.mp4"></video>                          <!--vidéo avec source-->
-      <audio src="audio.mp3"></audio>                          <!--audio avec source-->
-      <iframe src="https://www.example.com"></iframe>          <!--intégration d'une page web externe-->
-      <object data="file.pdf" type="application/pdf"></object> <!--intégration d'un objet externe-->
+      <img src="image.jpg" alt="descritpion de l'image" /><hr> <!--image avec description--> <!-- hr= aller à la ligne-->
+      <video src="video.mp4"></video><hr>                          <!--vidéo avec source-->
+      <audio src="audio.mp3"></audio><hr>                          <!--audio avec source-->
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2624.991441025255!2d2.2919063755286673!3d48.85837360070898!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47e66e2964e34e2d%3A0x8ddca9ee380ef7e0!2sTour%20Eiffel!5e0!3m2!1sfr!2sfr!4v1749198140664!5m2!1sfr!2sfr" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe><hr>     <!--intégration d'une page web externe-->
+      <object data="file.pdf" type="application/pdf"></object><hr> <!--intégration d'un objet externe-->
+
+      <ul>
+        <li>Liste non ordonnée</li>
+        <li>Liste non ordonnée</li>
+        <li>Liste non ordonnée</li>
+        <li>Liste non ordonnée</li>
+      </ul>
+      <ol>
+        <li>Liste ordonnée</li>
+        <li>Liste ordonnée</li>
+        <li>Liste ordonnée</li>
+      </ol> 
+
+    <dl>
+      <dt>Termes de définition</dt> <!--termes de définition-->
+      <dd>Définition du terme</dd>  <!--définition du terme-->
+      <dt>Autre terme</dt>
+      <dd>Autre définition</dd>
+    </dl>
+
+    <!-- Les formulaires-->
+    <form action="" method="post">
+      <label for="Name" aria-Label="" role="">Nom</label>
+      <input type="text" id="nom" name="nom" required> <!--input de type texte avec label et attribut requis-->
+
+      <input type="email" placeholder="Email">
+      <input type="password" placeholder="Mot de passe">
+      <input type="number" min="0" max="100">
+      <input type="date">
+      <input type="file">
+      <input type="checkbox">
+      <input type="radio">
+
+      <select>
+        <option>Option 1</option>
+        <option>Option 2</option>
+        <option>Option 3</option>
+      </select>
+
+      <textarea rows="4" cols="50"></textarea>
+
+      <button type="submit">Envoyer</button>
+    </form>
+    
+    <!-- Les tableaux-->
+    <table>
+      <thead>
+        <tr>
+          <th>En-tête 1</th>
+          <th>En-tête 2</th>
+          <th>En-tête 3</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>Ligne 1, Colonne 1</td>
+          <td>Ligne 1, Colonne 2</td>
+          <td>Ligne 1, Colonne 3</td>
+        </tr>
+        <tr>
+          <td>Ligne 2, Colonne 1</td>
+          <td>Ligne 2, Colonne 2</td>
+          <td>Ligne 2, Colonne 3</td>
+        </tr>
+      </tbody>
+    </table>
+
     </main>
+
+    <!-- pied de page-->
+    <footer> 
+      <p>&copy; 2023 Mon site web</p>
+      <p>Contact: <a href="mailto:  "></a></p>
+    </footer>
+    
   </body>
 </html>
