feat: add initial CV layout with sections for diplomas, experience, and languages

--- a/Cours/mon-cv/cv.html
+++ b/Cours/mon-cv/cv.html
@@ -3,11 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="./Assets/css/cv.css">
   <title>Mon CV</title>
 </head>
 <body>
 
   <header>
+    <div class="image">
+      <img src="./Assets/images/01 09 08  1.JPG" alt="moi">
+    </div>
 
     <nav>
       <ul>
@@ -17,8 +21,7 @@
         <li><a href="#language">Language</a></li>
       </ul>
     </nav>
-
-    <img src="" alt="">
+    
 </header>
 
   <main>
