feat: amélioration de la mise en page du CV avec des ajustements de styles et ajout d'icônes

--- a/projet/cv.html
+++ b/projet/cv.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Oswald:wght@200..700&display=swap" rel="stylesheet"> 
 
-    <!--Récupération du kit pour l'icon Facebook-->
+    <!--Récupération du kit pour les icons Facebook et autres-->
     <script
       src="https://kit.fontawesome.com/fe7c7c557d.js" crossorigin="anonymous">
     </script>
@@ -19,6 +19,7 @@
   <body>
 
     <header>
+      <h1>Moi</h1>
       <nav>
         <ul class="menu">
           <li><a href="">Home</a></li>
@@ -29,9 +30,10 @@
         </ul>
       </nav>
       <div class="titre"></div>
+
     </header>
 
-    <h1>Moi</h1>
+    
     <main>
       <section id="about_me">
         <div class="info">
@@ -65,33 +67,25 @@
         <div class="section_title">
           <h3>Expériences</h3>
         </div>
-        <div class="emploi">                               <!-- une autre façon de présenter une liste avec une div-->
+        <div class="emploi1">                               <!-- une autre façon de présenter une liste avec une div-->
           <h5>Nom de l'espérience</h5>
           <h6>Date de l'expérience</h6>
-          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo mollitia, 
-          doloribus architecto cupiditate labore quae quasi! Provident consectetur quis odit similique incidunt! 
-          Error ipsa eum quis quidem tempore quos.)</p>
+          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. )</p>
         </div>
-        <div class="emploi">          
+        <div class="emploi2">          
           <h5>Nom de l'espérience</h5>
           <h6>Date de l'expérience</h6>
-          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo mollitia, 
-          doloribus architecto cupiditate labore quae quasi! Provident consectetur quis odit similique incidunt! 
-          Error ipsa eum quis quidem tempore quos.)</p>
+          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. )</p>
         </div>
-        <div class="emploi">                               
+        <div class="emploi3">                               
           <h5>Nom de l'espérience</h5>
           <h6>Date de l'expérience</h6>
-          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo mollitia, 
-          doloribus architecto cupiditate labore quae quasi! Provident consectetur quis odit similique incidunt! 
-          Error ipsa eum quis quidem tempore quos.)</p>
+          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. )</p>
         </div>
-        <div class="emploi">                               
+        <div class="emploi4">                               
           <h5>Nom de l'espérience</h5>
           <h6>Date de l'expérience</h6>
-          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. Veritatis explicabo mollitia, 
-          doloribus architecto cupiditate labore quae quasi! Provident consectetur quis odit similique incidunt! 
-          Error ipsa eum quis quidem tempore quos.)</p>
+          <p>Commentaire sur l'xp (Lorem ipsum dolor sit amet consectetur adipisicing elit. )</p>
         </div>
         <div>
           <ol>                              <!-- une lite ordonnée numérotée-->
@@ -118,7 +112,7 @@
 
         <div class="langages">
         <figure>
-          <img src="" alt="">
+          <img src="../Assets/images/java_original_logo_icon_146458.svg" alt="Java logo">
           <figcaption>
             <h6>JAVA</h6>
             <p>Java est un langage natif objet</p>
@@ -179,11 +173,18 @@
     </main>
 
     <footer>
-      <i class="fa-brands fa-linkedin"><a href=""></a></i>       <!--Récupération de l'icon Linkedin-->
-      <i class="fa-brands fa-github"><a href=""></a></i>           <!--Récupération de l'icon GitHub-->
-      <i class="fa-solid fa-globe"><a href=""></a></i>          <!--Récupération de l'icon Portfolio-->  
-      <p>&#169; MOI</p>                                   <!--("&#169" ou "&copy" = incon copyright)sert à protéger son code-->
-      <a href="mentions-legales.html">Mentions légales</a>
+      <div class="reseau">
+        <a href="monadresselikedin"><i class="fa-brands fa-linkedin"></i></a>                        <!--Récupération de l'icon Linkedin-->
+        <a href="https://github.com/william77910"><i class="fa-brands fa-github"></i></a> <!--Récupération de l'icon GitHub-->
+        <a href="monportfolio.com"><i class="fa-solid fa-globe"></i></a>                            <!--Récupération de l'icon Portfolio-->
+      </div>
+      <div class="copyright">
+        <p>&#169; MOI | Tous droits réoservés</p>                              <!--("&#169" ou "&copy" = incon copyright)sert à protéger son code-->
+      </div>
+      <div class="mentions-legales">
+        <a href="mentions-legales.html">Mentions légales</a>
+      </div>
+
     </footer>
   </body>
 </html>
