--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -5,49 +5,83 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-  <title>Bootstrap</title>
+  <link rel="stylesheet" href="index.css">
+  <title>Bootstrap 5</title>
 </head>
+
 <body>
-  <nav class="navbar navbar-expand-lg bg-primary">  <!-- bg-primary = met la nav barre en couleurs primary pour bleu / 
-                                                    danger pour rouge (voir la doc pour les autres couleurs)-->
-  <div class="container-fluid">
-    <a class="navbar-brand" href="#">Navbar</a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<header>
+  <nav class="navbar navbar-expand-lg bg-body-tertiary"> <!--(enlever body)bg-primary = met la nav barre en couleurs bleu / 
+                                                            danger pour rouge (voir la doc pour les autres couleurs)-->
+  <div class="container test">                           <!--ajout de test dans la classe pour changer la couleur-->
+    <div>
+      <a class="navbar-brand" href="#"><img src="./Asset_bootstrap/images/webagency_images/images/logo.png" alt="Logo WebAgency"></a>
+    </div>
+
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+
+    <div class="collapse navbar-collapse d-flex justify-content-end" id="navbarNav">
+      <ul class="navbar-nav">
         <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="#">Home</a>
+          <a class="nav-link active icon-link icon-link-hover" aria-current="page" href="#">Accueil</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="#">Link</a>
-        </li>
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-            Dropdown
-          </a>
-          <ul class="dropdown-menu">
-            <li><a class="dropdown-item" href="#">Action</a></li>
-            <li><a class="dropdown-item" href="#">Another action</a></li>
-            <li><hr class="dropdown-divider"></li>
-            <li><a class="dropdown-item" href="#">Something else here</a></li>
-          </ul>
+          <a class="nav-link icon-link icon-link-hover" href="#">Services</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+          <a class="nav-link icon-link icon-link-hover" href="#">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link icon-link icon-link-hover" href="#">Contact</a>
         </li>
       </ul>
-      <form class="d-flex" role="search">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search"/>
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
     </div>
   </div>
-</nav>
-<!-- mettre le script pour bootstrap à la fin du body pour que le html sois chargé avant-->
+  </nav>
+</header>
+
+<section id="slider" class="container my-5">
+  <div>
+    <h1>WebAgency: l'agence de tous vos projets</h1>
+    <p>Vous avez un projet web ? La webagency vous aide à le réaliser</p>
+  </div>
+  <div id="carouselExample" class="carousel slide container">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+      <img src="./Asset_bootstrap/images/webagency_images/images/slider/bg1.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="./Asset_bootstrap/images/webagency_images/images/slider/bg2.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
+    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Previous</span>
+  </button>
+  <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
+    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    <span class="visually-hidden">Next</span>
+  </button>
+</div>
+</section>
+
+<main class="container">
+  <section id="services" class="row my-5">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <h2 class="text-center">Nos services</h2>
+      <p class="mx-auto mt-5">De taille humaine, notre agence vous accompagne du début à la fin de votre projet. 
+        Nos experts vous aident à optimiser l'expérience utilisateur et tirer le meilleur potentiel de chaque support, 
+        du web au mobile.</p>
+    </div>
+  </section>
+</main>
+
+<!-- mettre le script pour bootstrap à la fin du body pour que le html soit chargé avant-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
 </script>
+
 </body>
 </html>
