--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -66,12 +66,34 @@
   <section id="services" class="row my-5">
     <div class="col-lg-12 col-md-12 col-sm-12">
       <h2 class="text-center">Nos services</h2>
+      <div class="line"></div>
+      <div class="circle">
+        <i class="fas fa-circle fa-xs"></i>
+      </div>
       <p class="mx-auto mt-5">De taille humaine, notre agence vous accompagne du début à la fin de votre projet. 
         Nos experts vous aident à optimiser l'expérience utilisateur et tirer le meilleur potentiel de chaque support, 
         du web au mobile.</p>
     </div>
+    <div class="col-lg-6 col-md-6 sm-12">
+      <img src="" alt="">
+    </div>
+    <div class="col-lg-6 col-md-6 sm-12 d-flex flex-column">
+      <div>
+        <div class="icon"></div>
+        <div class="title_text"></div>
+      </div>
+      <div>
+        <div class="icon"></div>
+        <div class="title_text"></div>
+      </div>
+      <div>
+        <div class="icon"></div>
+        <div class="title_text"></div>
+      </div>
+    </div>
   </section>
 </main>
+
 <!-- mettre le script pour bootstrap à la fin du body pour que le html soit chargé avant-->
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/js/bootstrap.bundle.min.js" 
         integrity="sha384-j1CDi7MgGQ12Z7Qab0qlWQ/Qqz24Gc6BM0thvEMVjHnfYGF0rmFCozFSxQBxwHKO" crossorigin="anonymous">
