--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -5,6 +5,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" 
         integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.0.10/css/all.css" integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+        crossorigin="anonymous">
   <link rel="stylesheet" href="index.css">
   <title>Bootstrap 5</title>
 </head>
@@ -39,11 +41,11 @@
   </nav>
 </header>
 <section id="slider" class="container my-5">
-  <div>
-    <h1>WebAgency: l'agence de tous vos projets</h1>
+  <div class="image_text">
+    <h1><span>WebAgency</span> : l'agence de tous<br> vos projets !</h1>
     <p>Vous avez un projet web ? La webagency vous aide à le réaliser</p>
   </div>
-  <div id="carouselExample" class="carousel slide container">
+  <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
     <div class="carousel-item active">
       <img src="./Asset_bootstrap/images/webagency_images/images/slider/bg1.jpg" class="d-block w-100" alt="...">
