--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -43,7 +43,7 @@
 <section id="slider" class="container my-5">
   <div class="image_text">
     <h1><span>WebAgency</span> : l'agence de tous<br> vos projets !</h1>
-    <p>Vous avez un projet web ? La webagency vous aide à le réaliser</p>
+    <p class="text-white">Vous avez un projet web ? La webagency vous aide à le réaliser</p>
   </div>
   <div id="carouselExample" class="carousel slide">
   <div class="carousel-inner">
@@ -76,21 +76,39 @@
         Nos experts vous aident à optimiser l'expérience utilisateur et tirer le meilleur potentiel de chaque support, 
         du web au mobile.</p>
     </div>
-    <div class="col-lg-6 col-md-6 sm-12">
-      <img src="" alt="">
+    <div class="col-lg-5 col-md-5 sm-12">
+      <img src="./Asset_bootstrap/images/webagency_images/images/main-feature.png" alt="photo ordinateur">
     </div>
-    <div class="col-lg-6 col-md-6 sm-12 d-flex flex-column">
-      <div>
-        <div class="icon"></div>
-        <div class="title_text"></div>
+    <div class="col-lg-7 col-md-7 sm-12 d-flex flex-column">
+      <div class="d-flex w-100 mx-auto">
+        <div class="icon">
+          <i class="fas fa-chart-line fa-lg"></i>
+        </div>
+        <div class="title_text w-100 ms-4">
+          <h3>UX design</h3>
+              <p>Une équipe passionée qui place l’utilisateur final au centre de sa démarche pour une technologie plus
+                humaine.</p>
+        </div>
       </div>
-      <div>
-        <div class="icon"></div>
-        <div class="title_text"></div>
+      <div class="d-flex w-100">
+        <div class="icon">
+          <i class="fas fa-cubes fa-lg"></i>
+        </div>
+        <div class="title_text ms-4">
+          <h3>UI design</h3>
+              <p> Une interface optimisée qui permet à votre site web de rester à la page au gré des évolutions techniques
+                  et des nouveaux usages.</p>
+        </div>
       </div>
-      <div>
-        <div class="icon"></div>
-        <div class="title_text"></div>
+      <div class="d-flex w-100">
+        <div class="icon">
+          <i class="fas fa-chart-pie fa-lg"></i>
+        </div>
+        <div class="title_text ms-4">
+          <h3>SEO</h3>
+              <p>Nos experts en référencement vous permettent d'améliorer le positionnement de votre site afin d'augmenter
+                  votre conversion.</p>
+        </div>
       </div>
     </div>
   </section>
