feat: ajout de la section "Nos projets" avec navigation et styles associés, ajout d'un fichier SVG pour l'icône

--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -106,10 +106,109 @@
         </div>
         <div class="title_text ms-4">
           <h3>SEO</h3>
-              <p>Nos experts en référencement vous permettent d'améliorer le positionnement de votre site afin d'augmenter
-                  votre conversion.</p>
+            <p>Nos experts en référencement vous permettent d'améliorer le positionnement de votre site afin d'augmenter
+              votre conversion.</p>
         </div>
       </div>
+    </div>
+  </section>
+  <section id="projets" class="row my-5">
+    <div class="col-lg-12 col-md-12 col-sm-12">
+      <h2 class="text-center">Nos projets</h2>
+      <div class="line"></div>
+      <div class="circle">
+        <i class="fas fa-circle fa-xs"></i>
+      </div>
+      <p class="mx-auto mt-5">Beaucoup d'entreprises et particuliers nous ont fais confiance pour leur projets ! 
+        Découvrez une sélection de nos réalisations tendances, modernes et innovantes.</p>
+    </div>
+    <nav class="nav_projets mx-auto">
+      <a href="#Tous" class="mx-auto">Tous</a>
+      <a href="#Créations" class="mx-auto">Créations</a>
+      <a href="#Corporate" class="mx-auto">Corporate</a>
+      <a href="#Portfolio" class="mx-auto">Portfolio</a>
+    </nav>
+    <div class="album">
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/01.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/01.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/02.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/02.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/03.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/03.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/04.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/04.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/05.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/05.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/06.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/06.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/07.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/07.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
+      <figure>
+        <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/08.jpg">
+          <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/08.jpg" alt="Projet UX design">
+        </a>
+        <figcaption>
+          <h4>Lunettes en folies</h4>
+          <p>Les lunettes qui ont du pif</p>
+          <i class="fa fa-eye"></i>
+        </figcaption>
+      </figure>
     </div>
   </section>
 </main>
