--- a/Bootstrap/index.html
+++ b/Bootstrap/index.html
@@ -128,11 +128,11 @@
       <a href="#Corporate" class="mx-auto">Corporate</a>
       <a href="#Portfolio" class="mx-auto">Portfolio</a>
     </nav>
-    <div class="album">
+    <div class="album my-5">
       <figure>
         <a href="./Asset_bootstrap/images/webagency_images/images/portfolio/01.jpg">
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/01.jpg" alt="Projet UX design">
-        </a>
+      </a>
         <figcaption>
           <h4>Lunettes en folies</h4>
           <p>Les lunettes qui ont du pif</p>
@@ -144,8 +144,8 @@
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/02.jpg" alt="Projet UX design">
         </a>
         <figcaption>
-          <h4>Lunettes en folies</h4>
-          <p>Les lunettes qui ont du pif</p>
+          <h4>Origamis création!</h4>
+            <p>Rabbit Party</p>
           <i class="fa fa-eye"></i>
         </figcaption>
       </figure>
@@ -154,8 +154,8 @@
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/03.jpg" alt="Projet UX design">
         </a>
         <figcaption>
-          <h4>Lunettes en folies</h4>
-          <p>Les lunettes qui ont du pif</p>
+          <h4>Pompadour.fr</h4>
+            <p>Site Pompadour original</p>
           <i class="fa fa-eye"></i>
         </figcaption>
       </figure>
@@ -164,8 +164,8 @@
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/04.jpg" alt="Projet UX design">
         </a>
         <figcaption>
-          <h4>Lunettes en folies</h4>
-          <p>Les lunettes qui ont du pif</p>
+          <h4>Tendance architecture</h4>
+            <p>Création de Maquette</p>
           <i class="fa fa-eye"></i>
         </figcaption>
       </figure>
@@ -174,8 +174,8 @@
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/05.jpg" alt="Projet UX design">
         </a>
         <figcaption>
-          <h4>Lunettes en folies</h4>
-          <p>Les lunettes qui ont du pif</p>
+          <h4>Mockup.com</h4>
+            <p>Site de vente en ligne</p>
           <i class="fa fa-eye"></i>
         </figcaption>
       </figure>
@@ -184,8 +184,8 @@
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/06.jpg" alt="Projet UX design">
         </a>
         <figcaption>
-          <h4>Lunettes en folies</h4>
-          <p>Les lunettes qui ont du pif</p>
+          <h4>Architecture du monde</h4>
+            <p>Création Graphique</p>
           <i class="fa fa-eye"></i>
         </figcaption>
       </figure>
@@ -194,8 +194,8 @@
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/07.jpg" alt="Projet UX design">
         </a>
         <figcaption>
-          <h4>Lunettes en folies</h4>
-          <p>Les lunettes qui ont du pif</p>
+          <h4>Créative logo</h4>
+            <p>Une de nos création Logo</p>
           <i class="fa fa-eye"></i>
         </figcaption>
       </figure>
@@ -204,12 +204,43 @@
           <img src="./Asset_bootstrap/images/webagency_images/images/portfolio/08.jpg" alt="Projet UX design">
         </a>
         <figcaption>
-          <h4>Lunettes en folies</h4>
-          <p>Les lunettes qui ont du pif</p>
+          <h4>BeTheme.fr</h4>
+            <p>Fournitures Bureautique</p>
           <i class="fa fa-eye"></i>
         </figcaption>
       </figure>
     </div>
+  </section>
+  <section id="contact">
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2530.9029174613233!2d3.066607111369834!3d50.628920271508456!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x47c2d58df830a2af%3A0x21eef8967f281914!2s5%20Rue%20Pierre%20Mauroy%2C%2059800%20Lille!5e0!3m2!1sfr!2sfr!4v1749748529458!5m2!1sfr!2sfr" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+    <div class="filtre"></div>
+      <form>
+        <div class="row mb-3">
+          <label for="inputName" class="col-sm-2 col-form-label">Nom</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputName">
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="inputEmail3" class="col-sm-2 col-form-label">Email</label>
+          <div class="col-sm-10">
+            <input type="email" class="form-control" id="inputEmail3">
+          </div>
+        </div>
+        <div class="row mb-3">
+          <label for="inputSubject" class="col-sm-2 col-form-label">Sujet</label>
+          <div class="col-sm-10">
+            <input type="text" class="form-control" id="inputSubject">
+          </div>
+        </div>
+        <fieldset class="row mb-3">
+          <label for="inputMessage" class="col-sm-2 col-form-label">Message</label>
+          <div class="col-sm-10">
+            <textarea class="col-sm-2 col-form-label" name="inputMessage" id="inputMessage"></textarea>
+          </div>
+        </fieldset>
+        <button type="submit" class="btn btn-primary">Envoyer</button>
+      </form>
   </section>
 </main>
 
