--- a/JavaScipt/index.html
+++ b/JavaScipt/index.html
@@ -7,9 +7,23 @@
     <title>Javascript</title>
 </head>
 <body>
-    <h1>bonjour</h1>
+    
+    <div id="container">
+        <h1 class="titre">Javascript</h1>
+        <p class="paragraphe">Premier texte</p>
+        <p class="paragraphe">Deuxième texte</p>
+    </div>
+
+    <!--<div id="editerMoi">
+        <p class="texte">Texte premier</p>
+        <input type="text" id="monInput" value="valeur initiale">           Champ de saisie
+    </div>-->
 
 
-    <script src="./Asset/js/script.js"></script>                     <!--le script js est toujours en bas du body-->
+
+    <script src="./Asset/js/dom.js"></script>
+    <!--<script src="./Asset/js/exo3.js"></script>-->
+    <!--<script src="./Asset/js/exo2.js"></script>-->                       <!--le script js est toujours en bas du body-->
+    <!--<script src="./Asset/js/script.js"></script>-->                     <!--le script js est toujours en bas du body-->
 </body>
 </html>
